--- a/src/content/docs/htb/boardlight.mdx
+++ b/src/content/docs/htb/boardlight.mdx
@@ -3,7 +3,7 @@ layout: /src/layouts/PostLayout.astro
 title: Boardlight
 tags: []
 ---
-**Start 22:40 11/07**
+**Start 22:40 11-07-2024**
 
 First off we start with active recon. Use `nmap -sT -A 10.10.11.11` and we get the following output:
 
@@ -124,4 +124,3 @@ As always it is placed in the `/root` directory.
 
 **Finished 11:08 13/07**  
 
-Links: [[Hack The Box]] 
