--- a/src/content/docs/htb/beep.mdx
+++ b/src/content/docs/htb/beep.mdx
@@ -3,7 +3,7 @@ layout: /src/layouts/PostLayout.astro
 title: Beep
 tags: []
 ---
-**Start 14:30 18-08**
+**Start 14:30 18-08-2024**
 
 ---
 ```
@@ -11,7 +11,7 @@ tags: []
 ```
 ## Recon
 
-==Nmap==
+### Nmap
 ```bash
 ┌──(kali㉿kali)-[~]
 └─$ nmap 10.10.10.7        
@@ -153,7 +153,7 @@ Click on the `pen` icon and enter `1`. When done refresh the website and it shou
 
 After finding out that the website is powered by `elastix` we do a `dirsearch` for good measure
 
-==dirsearch==
+### dirsearch
 I enumerated the directories using the following commands:
 
 ```bash
@@ -186,7 +186,7 @@ Here we see the `/mailman/listinfo` directory pop up, let's check it out.
 
 This turns out not to be useful for us. Let's look further.
 
-==Exploit.db==
+### Exploit.db
 I decided to hop on [Exploit.db](https://www.exploit-db.com/) and check what I could find on `Elastix`, turns out there's quite some vulnerabilities out there.
 
 ![](../../../assets/0d156dc5c29f8f7b8e3b6dc3e3b8b334.png)
@@ -282,9 +282,7 @@ What we did was simply try to connect to `SSH` using an older and outdated `Key 
 Now that we have the `root` shell we can go onto grabbing the flags.
 
 
-## Flags
-
-==user.txt==
+### user.txt
 I first grabbed the `root` flag and then decided to go into the `fanis` user's directory:
 
 ```bash
@@ -297,7 +295,7 @@ drwx------ 2 spamfilter spamfilter 4096 Apr  7  2017 spamfilter
 dec69378a7985d8043034e70570f3d10
 ```
 
-==root.txt==
+### root.txt
 We land in this directory right away so we can go ahead and `cat` the flag:
 
 ```bash
@@ -320,6 +318,6 @@ c2df875456f97069a67ac5acd2159e69
 
 ---
 
-**Finished 20:39 19-08**
+**Finished 20:39 19-08-2024**
 
 [^Links]: [[Hack The Box]] [[OSCP Prep	]]
